More work on new decimal preference