@@ -22,14 +22,13 @@ import android.widget.TextView;
 import android.widget.LinearLayout;
 import android.content.res.*;
 
-public class DecimalPreference extends DialogPreference implements SeekBar.OnSeekBarChangeListener
+public class DecimalPreference extends DialogPreference
 {
   private static final String androidns="http://schemas.android.com/apk/res/android";
   private static final String appns="http://schemas.android.com/apk/res/net.mandaria";
 
   private TextView mSplashText,mValueText;
   private EditText mEditInteger, mEditDecimal;
-  private Button mIncreaseInteger, mDecreaseInteger, mIncreaseDecimal, mDecreaseDecimal;
   private Context mContext;
 
   private String mDialogMessage, mSuffix;
@@ -64,82 +63,37 @@ public class DecimalPreference extends DialogPreference implements SeekBar.OnSee
     
     TableRow row_header = new TableRow(mContext);
     row_header.addView(mSplashText);
-
-//    mValueText = new TextView(mContext);
-//    mValueText.setGravity(Gravity.CENTER_HORIZONTAL);
-//    mValueText.setTextSize(32);
-//    params = new TableLayout.LayoutParams(
-//    	TableLayout.LayoutParams.FILL_PARENT, 
-//    	TableLayout.LayoutParams.WRAP_CONTENT);
-//    layout.addView(mValueText, params);
-
-    mIncreaseInteger = new Button(mContext);
-    mIncreaseInteger.setText("+");
     
     mEditInteger = new EditText(mContext);
-    //mEditInteger.setCursorVisible(false);
-    //mEditInteger.setEnabled(false);
-    
-    mDecreaseInteger = new Button(mContext);
-    mDecreaseInteger.setText("-");
-    
-    
-    mIncreaseDecimal = new Button(mContext);
-    mIncreaseDecimal.setText("+");
     
     mEditDecimal = new EditText(mContext);
-    //mEditDecimal.setCursorVisible(false);
     
-    mDecreaseDecimal = new Button(mContext);
-    mDecreaseDecimal.setText("-");
+    TextView dot = new TextView(mContext);
+    dot.setText(".");
+    
+    TextView percent = new TextView(mContext);
+    percent.setText("%");
     
     TableRow row_one = new TableRow(mContext);
-    row_one.addView(mIncreaseInteger);
-    row_one.addView(mIncreaseDecimal);
-    
-    TableRow row_two = new TableRow(mContext);
-    row_two.addView(mEditInteger);
-    row_two.addView(mEditDecimal);
-    
-    TableRow row_three = new TableRow(mContext);
-    row_three.addView(mDecreaseInteger);
-    row_three.addView(mDecreaseDecimal);
+    row_one.addView(mEditInteger);
+    row_one.addView(dot);
+    row_one.addView(mEditDecimal);
+    row_one.addView(percent);
     
     layout.addView(row_header);
     
     TableLayout table_main = new TableLayout(mContext);
     table_main.addView(row_one);
-    table_main.addView(row_two);
-    table_main.addView(row_three);
     
     TableRow row_main = new TableRow(mContext);
     row_main.addView(table_main);
     
     layout.addView(row_main);
 
-//    layout.addView(mIncreaseInteger, new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT, LinearLayout.LayoutParams.WRAP_CONTENT));
-//    layout.addView(mEditInteger, new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT, LinearLayout.LayoutParams.WRAP_CONTENT));
-//    layout.addView(mDecreaseInteger, new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT, LinearLayout.LayoutParams.WRAP_CONTENT));
-//    
-//    layout.addView(mIncreaseDecimal, new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT, LinearLayout.LayoutParams.WRAP_CONTENT));
-//    layout.addView(mEditDecimal, new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT, LinearLayout.LayoutParams.WRAP_CONTENT));
-//    layout.addView(mDecreaseDecimal, new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT, LinearLayout.LayoutParams.WRAP_CONTENT));
-
     if (shouldPersist())
       mValue = getPersistedFloat(mDefault);
 
-      mInteger = (int)Math.floor((double)mValue);
-	  mDecimal = (int)(mValue - mInteger) * 100;
-	  try
-	  {
-	  mEditInteger.setText(Integer.toString(mInteger));
-	  mEditDecimal.setText(Integer.toString(mDecimal));
-	  }
-	  catch(Exception ex)
-	  {
-		  int test = 0;
-		  test++;
-	  }
+      BindData();
     
     return layout;
   }
@@ -147,11 +101,11 @@ public class DecimalPreference extends DialogPreference implements SeekBar.OnSee
   private void BindData()
   {
 	  mInteger = (int)Math.floor((double)mValue);
-	  mDecimal = (int)(mValue - mInteger) * 100;
+	  mDecimal = (int)((mValue - mInteger) * 100);
 	  try
 	  {
-	  mEditInteger.setText(mInteger);
-	  mEditDecimal.setText(mDecimal);
+		  mEditInteger.setText(Integer.toString(mInteger));
+		  mEditDecimal.setText(Integer.toString(mDecimal));
 	  }
 	  catch(Exception ex)
 	  {
@@ -162,10 +116,9 @@ public class DecimalPreference extends DialogPreference implements SeekBar.OnSee
   @Override 
   protected void onBindDialogView(View v) {
     super.onBindDialogView(v);
-    //BindData();
-    //mSeekBar.setMax(mMax);
-    //mSeekBar.setProgress(mValue - mMin);
+    BindData();
   }
+  
   @Override
   protected void onSetInitialValue(boolean restore, Object defaultValue)  
   {
@@ -174,7 +127,8 @@ public class DecimalPreference extends DialogPreference implements SeekBar.OnSee
     {
       try
       {
-        mValue = shouldPersist() ? getPersistedFloat(mDefault) : 0;
+    	  mValue = shouldPersist() ? getPersistedFloat(mDefault) : 0;
+    	  BindData();
       }
       catch(Exception ex)
       {
@@ -184,17 +138,19 @@ public class DecimalPreference extends DialogPreference implements SeekBar.OnSee
     else 
       mValue = (Float)defaultValue;
   }
-
-  public void onProgressChanged(SeekBar seek, int value, boolean fromTouch)
+  
+  @Override
+  protected void onDialogClosed(boolean positiveResult) 
   {
-    String t = String.valueOf(value + mMin);
-    mValueText.setText(mSuffix == null ? t : t.concat(mSuffix));
-    if (shouldPersist())
-      persistFloat(value + mMin);
-    callChangeListener(new Float(value + mMin));
+	  if(positiveResult == true)
+	  {
+		  super.onDialogClosed(positiveResult);
+		  String value = mEditInteger.getText() + "." + mEditDecimal.getText();//mInteger + "." + mDecimal;
+		  mValue = Float.valueOf(value);
+		  if (shouldPersist())
+			  persistFloat(mValue);
+	  }
   }
-  public void onStartTrackingTouch(SeekBar seek) {}
-  public void onStopTrackingTouch(SeekBar seek) {}
 
   public void setMax(int max) { mMax = max; }
   public float getMax() { return mMax; }
